--- a/topic-model/topic_model.ipynb
+++ b/topic-model/topic_model.ipynb
@@ -319,6 +319,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pyLDAvis.save_html(diplo_dict, )"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
